@@ -27,6 +27,7 @@ Contributors:
   Benoit Averty : taskbar enhancements
   Justin Jacobs : tint2conf fixes
   Oskari Rauta : separator plugin, gradients
+  Michael Messmore : Support for Path in .desktop files
 
 Translations:
   Bosnian:
