@@ -1,4 +1,4 @@
-2016-10-08 master
+2016-12-04 master
 - Fixes:
   - tint2conf: executor tooltips are now correctly disabled when text config value is empty (contributed by Justin Jacobs)
 - Enhancements:
@@ -6,6 +6,7 @@
   - New config option taskbar_hide_if_empty to hide an empty taskbar in multi_desktop mode (contributed by Benoit Averty)
   - Gradient backgrounds (contributed by Oskari Rauta)
   - New option: panel_shrink (fixes issue #333)
+  - Support for Path in .desktop files (contributed by Michael Messmore)
 - New plugin: separator (contributed by Oskari Rauta)
 
 2016-08-02 0.12.12
